syntax = "proto3";

package user;

option go_package = "streak/user";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);
  rpc LogoutUser(LogoutUserRequest) returns (LogoutUserResponse);
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
}

message CreateUserResponse {
  bool success = 1;
  string message = 2;
}

message LoginUserRequest {
  string username = 1;
  string password = 2;
}

message LoginUserResponse {
  bool success = 1;
  string message = 2;
}

message LogoutUserRequest {
  string username = 1;
}

message LogoutUserResponse {
  bool success = 1;
  string message = 2;
}
